--- a/Sovetsk_(Kirovan_agj).mw
+++ b/Sovetsk_(Kirovan_agj).mw
@@ -15,7 +15,6 @@
  | Aigvö = [[UTC]]+3 ([[MSK]]+0)
 }}
 {{Znamoičendad|Sovetsk}}
-[[Fail:Ограда кладбища с воротами. Вид со стороны улицы.jpg|thumb|left|250px|[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman Katken pühäpert' (17. voz'sada), vll 1609−1764 mez'jumalankodi.]]
 '''Sovetsk''' ({{lang-ru|Сове́тск}}, {{lang-mhr|Кукарка}}) om [[Venäma]]n lidn, lidnankund da avtotesol'm [[Kirovan agj]]an suves. Se om [[Sovetskan rajon]]an administrativine keskuz.
 
 == Istorii ==
@@ -36,6 +35,15 @@ Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 16 598 rist
 Rahvahad (2002): [[venälaižed]] — 95,3%, [[marilaižed]] — 1,5%, toižed rahvahad — 3,2%.
 
 Koume professionaližen opendusen aluzkundad oma olmas lidnas: Suvodjen mechoz-tehnikum (alusenpanend vl 1896)<ref>[http://slt43.ru/ Suvodjen mechoz-tehnikuman sait (''slt43.ru'').] {{ref-ru}}</ref>, Sovetskan tegimišton i rahvahanpramozloiden tehnikum<ref>[http://pu39admru.ucoz.ru/ Sovetskan tegimišton i rahvahanpramozloiden tehnikuman sait (''pu39admru.ucoz.ru'').] {{ref-ru}}</ref>, Sovetskan industrialiž-pedagogine kolledž.<ref>[http://ipcsovetsk.ru/ Sovetskan industrialiž-pedagogižen kolledžan sait (''ipcsovetsk.ru'').] {{ref-ru}}</ref>
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Kukarka museum.jpg|Kodirandantedištandmuzei (2008, Ph. Stroican päjumalanpertin kaičenus pala)
+Ограда кладбища с воротами. Вид со стороны улицы.jpg|[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman Katken pühäpert' (17. voz'sada), vll 1609−1764 mez'jumalankodi
+Кукарское кружево.JPG|Kukarkan (Vätkan) kružavan ozutesed vl 2012
+Учебный корпус Суводского лесхоза-техникума.jpg|Suvodjen mechoz-tehnikum
+Автовокзал - panoramio - ВОЛКОВ АЛЬБЕР.jpg|Lidnan avtobusstancii vl 2010
+</gallery>
 
 == Homaičendad ==
 <references />
