--- a/Slobodskoi.mw
+++ b/Slobodskoi.mw
@@ -33,6 +33,15 @@ Rahvahad (2010): [[venälaižed]] — 96,0%, [[udmurtalaižed]] — 1,7%, [[tota
 
 Professionaližen opendusen aluzkundad oma Slobodskoin tehnologine tehnikum<ref>[http://www.сгтт43.рф/ Slobodskoin tehnologižen tehnikuman sait (''сгтт43.рф'').] {{ref-ru}}</ref> i Slobodskoin pedagogikan i socialižiden kosketusiden kolledž.<ref>[http://slobkoll.ru/ Slobodskoin pedagogikan i socialižiden kosketusiden kolledžan sait (''slobkoll.ru'').] {{ref-ru}}</ref>
 
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Никольская церковь в г. Слободском.jpg|Ph. Mikulain jumalanpert', vn 2018 nägu
+Христорождественская церковь MG 4811.jpg|Raštvoiden jumalanpert', vn 2019 nägu
+Торговые ряды MG 4874.jpg|Torguindrived i adivpertintanaz (tagamal) vl 2019
+Слободской, дом культуры.jpg|Kul'turkeskuz [[Maksim Gor'kii|Maksim Gor'kijan]] nimed (2021)
+Мост через р.Вятка - panoramio.jpg|Avtotesild Vätkas päliči vl 2004
+</gallery>
+
 == Homaičendad ==
 <references />
 
