--- a/Nolinsk.mw
+++ b/Nolinsk.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 9,722
  | Voz' = 2018
  | Pind = 10
- | Fail = Колокольня Успенской церкви г. Нолинска.jpg
+ | Fail = Здание б. духовного училища, ул. Федосеева, 2.jpg
  | Pämez' = Jelena Uspenskaja<br />(kül'mku 2012—)
  | Telefonkod = +7-83368-xx-xxx
  | Avtokod = 43
@@ -30,6 +30,14 @@ Nolinsk om lidnankundan üks'jäine eländpunkt.
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 9 554 ristitud, rajonan pol'. Kaikiš suremb lidnan ristitišt oli 11 637 eläjad vl 1979.
 
 Professionaližen opendusen aluzkundad oma Nolinskan maižandusen mehanizacijan tehnikum<ref>[http://www.ntmsh.ru/ Nolinskan maižandusen mehanizacijan tehnikuman sait (''ntmsh.ru'').] {{ref-ru}}</ref> i Nolinskan politehnine tehnikum.<ref>[https://ngptt.ru/ Nolinskan politehnižen tehnikuman sait (''ngptt.ru'').] {{ref-ru}}</ref>
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Военный комиссариат (б. дом П.С. Братухина) на ул. Дзержинского.jpg|Sodakomissariat (2019)
+Ансамбль Никольского собора.jpg|Ph. Mikulain päjumalanpert', vn 2021 olend
+Ансамбль Успенской церкви, Нолинск.jpg|Emäganpäivän jumalanpert', vn 2019 nägu
+Нолинск, ул. Советская, 17.jpg|Tehnikuman norišton keskuz (2019)
+</gallery>
 
 == Homaičendad ==
 <references />
