--- a/Sargsän_Tigran.mw
+++ b/Sargsän_Tigran.mw
@@ -2,7 +2,9 @@
 | изображение = Tigran Sargsyan.jpg
 | описание изображения = Tigran Sargsän vn 2011 kezakus
 }}
-'''Tigran Surenovič Sargsän''' ({{lang-hy|Տիգրան Սուրենի Սարգսյան}}; sünd. [[29. viluku]] [[1960]], [[Vanadzor|Kirovakan]], [[Armenii|Armenijan NST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om ranu 12. [[Armenii|Armenijan]] päministran (9. sulaku 2008 — 3. sulaku 2014).
+'''Tigran Surenovič Sargsän (Sarkisän)''' ({{lang-hy|Տիգրան Սուրենի Սարգսյան}}; sünd. [[29. viluku]] [[1960]], [[Vanadzor|Kirovakan]], [[Armenii|Armenijan NST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om armenine ekonomist i valdkundan šingotai. Mez' radoi 12. [[Armenii|Armenijan]] päministran (9. sulaku 2008 — 3. sulaku 2014).
+
+Sargsän radoi nenil radnikusil ende: Armenijan Keskuzbankan ezimez' (1998−2008), Armenijan sur'oigenu AÜV:oiš (2014−2016), Evrazijan ekonomižen laudkundan Kollegijan ezimez' (2016−2020). Vspäi 2020 mez' radab Evrazijan šingotesen bankan ohjastusen varaezimeheks.
 
 == Homaičendad ==
 <references/>
