*Empty MediaWiki Message*

--- a/Sargsän_Tigran.mw
+++ b/Sargsän_Tigran.mw
@@ -5,7 +5,7 @@
 '''Tigran Surenovič Sargsän (Sarkisän)''' ({{lang-hy|Տիգրան Սուրենի Սարգսյան}}; sünd. [[29. viluku]] [[1960]], [[Vanadzor|Kirovakan]], [[Armenii|Armenijan NST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om armenine ekonomist i valdkundan šingotai. Mez' radoi 12. [[Armenii|Armenijan]] päministran (9. sulaku 2008 — 3. sulaku 2014).
 
 == Biografii ==
-Profškolan lopindan jäl'ghe Sargsän tuli openumha Jerevanan rahvahanižandusen institutha, sen planiruindan da ekonomikan fakul'tetha vl 1978. Vll 1980−1983 tuleban aigan politikanmez' openui Leningradan finansiž-ekonomižes institutas, om sen pästnikan parahimidenke arvznamoidenke. Vl 1987 mez' lopi sen institutan aspiranturad, vahvišti ekonomižiden tedoiden kandidatan arvod «Regionaližen socialiž-ekonomižen šingotesen planiruind Armenijanke ozuteseks».
+Profškolan lopindan jäl'ghe Sargsän tuli openumha Jerevanan rahvahanižandusen institutha, sen planiruindan da ekonomikan fakul'tetha vl 1978. Vll 1980−1983 tuleban aigan politikanmez' openui Leningradan finansiž-ekonomižes institutas, om sen pästnikan parahimidenke arvznamoidenke. Vl 1987 mez' lopi sen institutan aspiranturad, vahvišti ekonomižiden tedoiden kandidatan arvod «Regionaližen socialiž-ekonomižen šingotesen planiruind Armenijanke ozuteseks»-temanke.
 
 Toižed opendused mäniba [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] Vašington-pälidnas: 1994. voz' — Rahvahidenkeskeine oiktusen institut, «Käskusensädai radmine»-palakund, i vll 1996−1997 openui [[Mail'man bank]]an Ekonomikan šingotesen institutas, sen «Effektivine ohjanduz bankoil»-palakundas.
 
