--- a/Peugeot_308.mw
+++ b/Peugeot_308.mw
@@ -5,6 +5,13 @@ Pästandan augotiž — voden [[2007]] sügüz'ku. Vspäi 2013 tehtas kahtent po
 
 Dizainan toižendad: hetčbek (5 uksed i 5 sijad, 3 uksed i 4 sijad), universal (5 uksed, 5 sijad), sedan (4 uksed i 5 sijad), kupe (2 uksed i 4 sijad).
 
+== Harakteristik ==
+* Likutimen mülü: 2,0 vai 1,6 litrad
+* Ajaimiden konorüt: 5 vai 6 pigut, mehanine vai avtomatine
+* Irdmärad:
+* Kaikiš lujemb piguz: o km/čas
+* Täuz' veduz passažiroita i jüguita: o kg
+
 == Homaičendad == 
 <references />
 
