--- a/Peugeot_308.mw
+++ b/Peugeot_308.mw
@@ -1,16 +1,17 @@
 [[Fail:Peugeot 308 5-Türer front-1.JPG|thumb|right|250px|Peugeot 308]]
 '''«Peugeot 308»''' (''Pežo 308'') om [[Francii|francižen]] [[Peugeot]]-kompanijan [[C (avton klass)|C-klassan]] avto. 
 
-Pästandan augotiž — voden [[2007]] sügüz'ku. Vspäi 2013 tehtas kahtent pol'ved. Vajehti [[Peugeot 307]]-avton model'rives.
+Pästandan augotiž — voden [[2007]] sügüz'ku. Vspäi 2013 tehtihe kahtent pol'ved. Vajehti [[Peugeot 307]]-avton model'rives. Vn 2021 semendkus koumanden pol'ven ühthekeradamine zavodiše, avton transmissii kändihe gibridižeks (benzin/dizel' elektrolikutimenke).
 
-Dizainan toižendad: hetčbek (5 uksed i 5 sijad, 3 uksed i 4 sijad), universal (5 uksed, 5 sijad), sedan (4 uksed i 5 sijad), kupe (2 uksed i 4 sijad).
+Ezmäižiden pol'viden dizainan toižendad: hetčbek (5 uksed i 5 sijad, 3 uksed i 4 sijad), universal (5 uksed, 5 sijad), sedan (4 uksed i 5 sijad), kupe (2 uksed i 4 sijad).
 
-== Harakteristik ==
-* Likutimen mülü: 2,0 vai 1,6 litrad
+== Harakteristik (kahtenz' pol'v) ==
+* Likutimen mülü: 2,0, 1,6 vai 1,2 litrad
 * Ajaimiden konorüt: 5 vai 6 pigut, mehanine vai avtomatine
-* Irdmärad:
-* Kaikiš lujemb piguz: o km/čas
-* Täuz' veduz passažiroita i jüguita: o kg
+* Irdmärad: 4253..4580 mm (SW) pitte, 1815 mm levette, 1460 mm korkte
+* Kezroiden baz: 2620 mm
+* Kaikiš lujemb piguz: 173..250 km/čas
+* Täuz' veduz passažiroita i jüguita: 1160..1200 (2,0 l) kg
 
 == Homaičendad == 
 <references />
