--- a/Sudjiden_kirj.mw
+++ b/Sudjiden_kirj.mw
@@ -1,3 +1,4 @@
+[[Fail:061.Samson Destroys the Philistines with an Ass' Jawbone.jpg|thumb|right|250px|''Samson rikob tuhad filistimalašt oslan löuglul''. Francižen [[Güstav Dore]]-grafikanpirdajan gravür, 1866.]]
 '''Sudjiden kirj''' ({{lang-he|ספר שׁוֹפְטִים}} ''Séfer Šoftím'', {{lang-el|Κριταὶ}} ''Kritai'', {{lang-la|Iudicum}}, {{lang-ru|Книга Судей}}) om evrejan [[Tanah]]-biblijan Neviim-jagusen kahtenz' kirj i [[hristanuskond]]an 7. [[Vanh Zavet|Vanhan Zavetan]] kirj.
 
 Original om sätud evrejan kelel. Kirj kogoneb 21 jagusespäi.
