--- a/Sudjiden_kirj.mw
+++ b/Sudjiden_kirj.mw
@@ -5,6 +5,8 @@ Original om sätud evrejan kelel. Kirj kogoneb 21 jagusespäi.
 
 Evrejalaižiden istorii starinoičese kirjas [[Iisus Navin]]an elon jäl'gmäižiš vozišpäi Samson-sudijan surmhasai. Evrejan vero lugeb, miše säduz om kirjutadud [[Samuil (endustai)|Samuil]]-endustajal.
 
+Sudijad oliba evrejalaižiden ohjandajad personad Iisus Navinaspäi ühtenzoittud Izrailin ezmäižen [[Saul]]-carin tulendhasai.
+
 == Homaičendad ==
 <references />
 
