*Empty MediaWiki Message*

--- a/Sudjiden_kirj.mw
+++ b/Sudjiden_kirj.mw
@@ -5,7 +5,7 @@ Original om sätud evrejan kelel. Kirj kogoneb 21 jagusespäi.
 
 Evrejalaižiden istorii starinoičese kirjas [[Iisus Navin]]an elon jäl'gmäižiš vozišpäi Samson-sudijan surmhasai. Evrejan vero lugeb, miše säduz om kirjutadud [[Samuil (endustai)|Samuil]]-endustajal.
 
-Sudijad oliba evrejalaižiden ohjandajad personad Iisus Navinaspäi ühtenzoittud Izrailin ezmäižen [[Saul]]-carin tulendhasai.
+Sudijad oliba evrejan rahvahan ohjandajad personad aigkeskustas Iisus Navinaspäi ühtenzoittud Izrailin ezmäižen [[Saul]]-carin tulendhasai.
 
 == Homaičendad ==
 <references />
