--- a/Gutenberg_Iogann.mw
+++ b/Gutenberg_Iogann.mw
@@ -4,7 +4,9 @@
 | описание изображения = Iogann Gutenbergan portret, om tehtud hänen surman jäl'ghe
 }}
 [[Fail:Gutenberg-Denkmal in Strassburg-2.jpg|thumb|left|250px|Muštpacaz Gutenbergale [[Strasburg]]as]]
-'''Iogann Gutenberg''' ({{lang-de|Johannes Gutenberg}}; sünd. keskes 1397 da 1400 vot, [[Mainc]], [[Pühä Rimalaine imperii]] — kol. 3. uhoku 1468, sigä-žo) — [[Germanii|germanijalaine]] sep', juvelir da melestegii. Vl 1440 hän sädi [[kirjoiden painmine|mahtusen painda]] likkujiden metalližiden literiden abul. Kavutihe kirjamiden zerkolkuvandad.
+'''Iogann Gutenberg''' ({{lang-de|Johannes Gutenberg}}; sünd. keskes 1397 da 1400 vot, [[Mainc]], [[Pühä Rimalaine imperii]] — kol. 3. uhoku 1468, sigä-žo) — [[Germanii|germanijalaine]] sep', juvelir da melestegii, Evropan ezmäine tipograf. Vl 1440 hän sädi [[kirjoiden painmine|mahtusen painda]] likkujiden metalližiden literiden abul. Kavutihe kirjamiden zerkolkuvandad.
+
+Gutenbergan painmižen tehnologii levitihe kaikedme Evropadme teravas i sid' mail'madme. Se vajehti kirjoiden äikerdoičendan veroližid mahtusid (käzikirjutusiden kirjutamine kädel i [[ksilografii]]) i valatoiti lujas mail'man kul'turha. Melestegijan päine [[Gutenbergan Biblii]]-tö tegihe [[Biblii|Biblijan]] ezmäižeks painmižversijaks.
 
 == Homaičendad ==
 <references/>
