--- a/Kirov.mw
+++ b/Kirov.mw
@@ -36,6 +36,20 @@ Avtobusad, trolleibusad, taksid da ezilidnelektrojonused oma kundaližeks transp
 
 Tatamaine civiline ''Pobedilovo''-lendimport (''KVX / КИО'', 128,2 tuh. passažiroid vl 2018) sijadase 22 km suvipäivlaskmha Kirovan keskusespäi lidnan Leninan rajonas. Tehtas reisid nenihe lidnoihe: [[Moskv]], [[Piter]], [[Narjan Mar]], [[Usinsk]], om čarterreisid (ližareisid) sihe i kezaližid reisid Mustmeren kurortlidnoihe.
 
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Администрация города Кирова.jpg|Lidnan administracijan sauvused (2012)
+Ансамбль Трифонова монастыря MG 4319 2.jpg|Emäganpäivän ph. Trifon Vätkalaižen mez'jumalankodi, vn 2019 nägu
+Vyatka-Kirov asv2019-05 img15 Seraphim of Sarov Church.jpg|Ph. Serafim Sarovalaižen päjumalanpert', vn 2019 nägu
+Factory gate «Avitec».JPG|«Avitek»-tegimen keskuztulend vl 2009
+ВяткаЦУМ, Киров.jpg|Universaline keskuzlauk vl 2015
+Фото первого корпуса (ул. Московская, 36).jpg|Vätkan valdkundaline universitet (1. korpus, 2020)
+Кировская государственная медицинская академия г.Киров.JPG|Kirovan valdkundaline medicinine akademii (2012)
+Здание театра. Театральная площадь.jpg|Kirovan agjan dramteatr Sergei Kirovan nimed Teatraližel torgul (2020)
+Pobedilovo airport. Kirov. Russia. Аэропорт Победилово. Киров. Россия - panoramio (2).jpg|Pobedilovo-lendimportan terminal vl 2011
+Станция Киров.jpg|Kirov-päraudtestancii vl 2011
+</gallery>
+
 == Tetabad sündnuded ==
 * [[Knäzev Lev|Lev Knäzev]] (1926−2012) — oli Nevondkundaližen Ühtištusen i Venäman venäkel'žen prozan kirjutai.
 * [[Sitnikov Aleksei Aleksandrovič|Aleksei Sitnikov]] (sünd. 1986) — Azerbaidžanan i Venäman figurist.
