--- a/Kirovo-Čepeck.mw
+++ b/Kirovo-Čepeck.mw
@@ -14,6 +14,7 @@
  | Avtokod = 43
  | Aigvö = [[UTC]]+3 ([[MSK]]+0)
 }}
+[[Fail:Osm-railway-karintorf-center-z15-mapnik.png|thumb|left|250px|Lidnan kart kaidraižuiženke Karintorfan raudtenke (2011)]]
 '''Kirovo-Čepeck''' ({{lang-ru|Ки́рово-Чепе́цк}}) om [[Venäma]]n lidn da lidnümbrik [[Kirovan agj]]an keskuzpalas. Se om [[Kirov]]an suvipäivnouzmaine ezilidn da aglomeracijan pala, agjan kahtenz' lidn eläjiden lugun mödhe, [[Kirovo-Čepeckan rajon]]an administrativižeks keskuseks mugažo (vspäi 1960), ei mülü rajonha.
 
 == Istorii ==
@@ -34,6 +35,15 @@ Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 80 921 rist
 Rahvahad (2002): [[venälaižed]] — 94,7%, [[totarlaižed]] — 1,6%, [[udmurtalaižed]] — 1,2%, toižed rahvahad — 2,5%.
 
 Professionaližen opendusen aluzkund om Vätkan avtotegimištoline kolledž.<ref>[http://vapk.info/ Vätkan avtotegimištoližen kolledžan sait (''vapk.info'').] {{ref-ru}}</ref>
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+The building of city administration (Kirovo-Cheprtsk).jpg|Lidnan i rajonan ohjandusen sauvuz (2014)
+All Saints Cathedral of Kirovo-Chetetsk 1.jpg|Venäman Kaikiden Pühämehiden jumalanpert' (ortodoksine hristanuskond), vn 2013 nägu
+Mineral fertilizer plant (Kirovo-Chepetsk).jpg|Mineraližiden heretusiden tegim (2006)
+School 12 (Kirovo-Chepetsk).jpg|Keskškol nomer 12 (2014)
+Karintorf railway TU4-2286 20111127 0399cnvt vernisaz.jpg|Taholine passažirine jonuz lidnas sen Karintorf-rajonaspäi vl 2011
+</gallery>
 
 == Homaičendad ==
 <references />
