--- a/Petrovskii_(stadion).mw
+++ b/Petrovskii_(stadion).mw
@@ -1,14 +1,16 @@
 {{Znamoičendad|Petrovskii}}
-[[Fail:Petrovskiy football stadium in SPB.jpg|thumb|300px|"Petrovskii"-stadion]]
-'''"Petrovskii"''' ({{lang-ru|"Петровский"}}) om stadion [[Piter]]iš, [[FK Zenit Piter|"Zenit"]]-futbolkluban kodiaren.
+[[Fail:Petrovskiy football stadium in SPB.jpg|thumb|250px|«Petrovskii»-stadionan nägu vl 2012]]
+'''«Petrovskii»''' ({{lang-ru|Петровский}}) om Venäman stadion [[Piter]]iš, «[[FK Zenit Piter|Zenit]]»-futbolkluban kodiaren.
 
-Sijadase [[Petrovskii (sar')|Petrovskii]]-sarel. Om olmas vspäi 1925. Sodan aigan oli pandud mantazole, om saudud möst vozil 1957—1960. Mülü om 21 504 ristitud.
+Sauvuz sijadase [[Petrovskii (sar')|ühtennimižel sarel]]. Om olmas vspäi 1925. Sodan aigan oli pandud mantazole, om saudud möst vozil 1957−1960. Mülü om 21 504 ristitud.
 
 == Irdkosketused ==
 * [http://www.petrovsky.spb.ru/ Petrovskii-stadionan oficialine sait (''petrovsky.spb.ru'').] {{ref-ru}}
 * [http://fc-zenit.ru/club/petrovsky/ Stadionan lehtpol' Zenitan saital (''fc-zenit.ru'').] {{ref-ru}}
+{{Commons|Category:Petrovsky Stadium in Saint Petersburg}}
 
 {{stub}}
 [[Kategorii:Zenit]]
-[[Kategorii:Piter]]
+[[Kategorii:Venäman stadionad]]
 [[Kategorii:Stadionad kirjamišton mödhe]]
+[[Kategorii:Petrogradan rajon]]
