--- a/Piter_(stadion).mw
+++ b/Piter_(stadion).mw
@@ -1,4 +1,4 @@
-[[Fail:Spb 06-2017 img40 Krestovsky Stadium.jpg|thumb|right|250px|«Piter»-stadion vn 2017 kezakus.]]
+[[Fail:Spb 06-2017 img40 Krestovsky Stadium.jpg|thumb|right|250px|«Piter»-stadion vn 2017 kezakus]]
 {{Znamoičendad|Piter (znamoičendad)}}
 '''Piter-stadion''' ({{lang-ru|Стадион «Санкт-Петербург»}}, {{lang-en|Saint Petersburg Stadium}}) om [[Piter|ühtennimižen lidnan]] stadion. Sijadase [[Krestovskii (sar')|Krestovskii]]-sarel lidnan keskuzpalas. Stadion om «[[FK Zenit Piter|Zenit]]»-futbolkluban päarenaks. Edeline tönimi — ''Futboline stadion Krestovskii-saren päivlaskmpol'žes palas'' ({{lang-ru|Футбольный стадион в западной части Крестовского острова}}). Om saudud vll 2007−2016. Projektan tegii om japonine Kišö Kurokava-arhitektor (1934−2007) da hänen «Kisho Kurokawa Architects & Associates»-büro.
 
@@ -17,5 +17,6 @@ Eziauguine sauvondan maksarv oli 6,7 milliardad rublid (250 mln US$), no summ ka
 
 {{stub}}
 [[Kategorii:Zenit]]
-[[Kategorii:Piter]]
+[[Kategorii:Piterin stadionad]]
 [[Kategorii:Stadionad kirjamišton mödhe]]
+[[Kategorii:Petrogradan rajon]]
