--- a/Petrovskii_(stadion).mw
+++ b/Petrovskii_(stadion).mw
@@ -1,8 +1,8 @@
 {{Znamoičendad|Petrovskii}}
-[[Fail:Petrovskiy football stadium in SPB.jpg|thumb|250px|«Petrovskii»-stadionan nägu vl 2012]]
+[[Fail:RUS-2016-Aerial-SPB-Petrovsky Stadium.jpg|thumb|250px|«Petrovskii»-stadionan nägu vn 2016 heinkus]]
 '''«Petrovskii»''' ({{lang-ru|Петровский}}) om Venäman stadion [[Piter]]iš. Se om «[[FK Zenit Piter|Zenit]]»-futbolkluban varaaren vspäi 2017, edel sidä oli sen kodiarenaks vspäi 1994.
 
-Sauvuz sijadase [[Petrovskii (sar')|ühtennimižel sarel]]. Se oli letud vl 1925 kuti '''stadion V.I. Leninan nimed'''. Sodan aigan stadion oli pandud mantazole, om saudud möst vozil 1957−1960. Mülü om 20 985 ristitud.
+Sauvuz sijadase [[Petrovskii (sar')|ühtennimižel sarel]]. Se oli letud vll 1924−1925 kuti '''stadion V.I. Leninan nimed'''. Sodan aigan stadion oli pandud mantazole, om saudud möst vozil 1957−1960. Nügüdläine nimituz om vspäi 1992. Mülü om 20 985 ristitud.
 
 == Irdkosketused ==
 * [http://www.petrovsky.spb.ru/ Petrovskii-stadionan oficialine sait (''petrovsky.spb.ru'').] {{ref-ru}}
