--- a/Aimaran_kel'.mw
+++ b/Aimaran_kel'.mw
@@ -1,8 +1,10 @@
 {{Znamoičendad|Aimar}}
-[[Fail:Aymara-Language-Distributio.png|thumb|right|250px|Aimaran kelen levigandusen kart.]]
+[[Fail:Aymara-Language-Distributio.png|thumb|right|250px|Aimaran kelen levigandusen kart]]
 '''Aimaran kel'''' (ičeze nimituz: ''aymar aru'') om üks' [[Suviamerikan indejižed keled|Suviamerikan indejižiš kelišpäi]]. Mülütadas [[aimaran keled|aimar (haki)-kel'kundha]].
 
-Aimaran kel' om valdkundkel' [[Bolivii|Bolivijas]], [[Peru]]n oficialine kel'; mugažo sil pagištas [[Čili]]š. Pagižijoiden lugu om läz 3 millionad ristituid (mamankel').
+Aimaran kel' om valdkundkel' [[Bolivii|Bolivijas]] ühtes ispanijan kelenke, [[Peru]]n oficialine kel'; mugažo sil pagištas [[Čili]]š. Pagižijoiden lugu om läz 3 millionad ristituid (mamankel'), heiden toine paginkel' om [[ispanijan kel']].
+
+Kelen ezmäine grammatik om sätud Ludoviko Bertonio-papil vl 1603, hän-žo kogozi ezmäšt vajehnikad vodele 1608. Aimaran kel' om agglütinativiž-polisintetine, sanoiden järgenduz om SOV. Kelen logik om koumevariantine äjiden toižiden keliden erineden, kudambiden logik om kaks'variantine.
 
 == Homaičendad ==
 <references/>
