*Empty MediaWiki Message*

--- a/Aimaran_kel'.mw
+++ b/Aimaran_kel'.mw
@@ -4,7 +4,7 @@
 
 Aimaran kel' om valdkundkel' [[Bolivii|Bolivijas]] ühtes ispanijan kelenke, [[Peru]]n oficialine kel'; mugažo sil pagištas [[Čili]]š. Pagižijoiden lugu om läz 3 millionad ristituid (mamankel'), heiden toine paginkel' om [[ispanijan kel']].
 
-Kelen ezmäine grammatik om sätud Ludoviko Bertonio-papil vl 1603, hän-žo kogozi ezmäšt vajehnikad vodele 1608. Aimaran kel' om agglütinativiž-polisintetine, sanoiden järgenduz om SOV. Kelen logik om koumevariantine äjiden toižiden keliden erineden, kudambiden logik om kaks'variantine.
+Kelen ezmäine grammatik om sätud Ludoviko Bertonio-papil vl 1603, hän-žo kogozi ezmäšt vajehnikad vodele 1608. Aimaran kel' om agglütinativiž-polisintetine, sanoiden järgenduz om SOV. Kelen logik om [[trinarine logik|koumevariantine (trinarine)]] äjiden toižiden keliden erineden, kudambiden logik om [[binarine logik|kaks'variantine (binarine)]].
 
 == Homaičendad ==
 <references/>
