--- a/2._Kunigahiden_kirj.mw
+++ b/2._Kunigahiden_kirj.mw
@@ -1,3 +1,4 @@
+[[Fail:Paris psaulter gr139 fol136v.jpg|thumb|right|250px|''Nafan-endustai todištab Davidan värad'', [[Parižan psaltir'|Parižan psaltirin]] kuva, 10. voz'sada]]
 '''2. Kunigahiden kirj''', vai '''2. Samuilan kirj''' ({{lang-he|שְׁמוּאֵל ב׳}} ''Šmuel' II'', {{lang-el|Βασιλειων Β'}} ''Basileion B'', {{lang-la|II Samuelis}}, {{lang-ru|2-я Книга Царств}}), om evrejan [[Tanah]]-biblijan kirj i [[hristanuskond]]an 10. [[Vanh Zavet|Vanhan Zavetan]] kirj.
 
 Original om sätud amuiževrejan kelel. Kirj kogoneb 24 jagusespäi.
