--- a/4._Kunigahiden_kirj.mw
+++ b/4._Kunigahiden_kirj.mw
@@ -1,3 +1,4 @@
+[[Fail:095.Elijah Ascends to Heaven in a Chariot of Fire.jpg|thumb|right|250px|''Illä-endustajan voznesenj taivhaze lämoikorjas'', francižen [[Güstav Dore]]-grafikanpirdajan gravür, vn 1866 hänen Biblijan pästand]]
 '''4. Kunigahiden kirj''' ({{lang-he|מְלָכִים ב׳}} ''Melahim II'', {{lang-el|Βασιλειων Δ'}} ''Basileion D'', {{lang-la|II Regum}}, {{lang-ru|4-я Книга Царств}}) om evrejan [[Tanah]]-biblijan kirj i [[hristanuskond]]an 12. [[Vanh Zavet|Vanhan Zavetan]] kirj.
 
 Original om sätud evrejan kelel. Kirj kogoneb 25 jagusespäi.
