--- a/Jošuan_kirj.mw
+++ b/Jošuan_kirj.mw
@@ -1,3 +1,4 @@
+[[Fail:044. The Israelites Cross the Jordan River.jpg|thumb|right|250px|''Izraililaižed ristikoitas Jordan-joged vagodme'', francižen Güstav Dore-grafikanpirdajan gravür, 1866]]
 '''Jošuan kirj''' ({{lang-he|יְהוֹשֻׁעַ}} ''Jehošua'', {{lang-el|Ἰησοῦς}} ''Iesous'', {{lang-la|Iosue}}, {{lang-ru|Книга Иисуса Навина}}) om evrejan [[Tanah]]-biblijan [[Neviim]]-jagusen («endustajad») ezmäine kirj i [[hristanuskond]]an 6. [[Vanh Zavet|Vanhan Zavetan]] kirj.
 
 Kirj starinoičeb [[evrejalaižed|evrejan rahvahan]] 13. voz'sadan EME istorijas [[Moisei]]-endustajan surman jäl'ghe, om 11. voz'sadan EME ližakirjutusid. Tegii om [[Iisus Navin]]-sodavei i endustai, Moisein jäl'ghetulii. Kirj kogoneb 24 jagusespäi, jagase kahteks palaks i ližakirjutusikš.
