--- a/Ezdran_kirj.mw
+++ b/Ezdran_kirj.mw
@@ -1,6 +1,7 @@
+[[Fail:Schnorr von Carolsfeld Bibel in Bildern 1860 126.png|thumb|right|250px|''Ezra kucub Pühäpertin toštmižsauvondale'', saksalaižen [[Julius Šnorr fon Karol'sfel'd]]-pirdajan gravür vn 1860 Biblijan pästandas]]
 '''Ezdran kirj''' ({{lang-he|עֶזְרָא}} ''Ezra'', {{lang-el|Ἒσδρας}} ''Esdras'', {{lang-la|Esdrae}}, {{lang-ru|Книга Ездры}}) om evrejan [[Tanah]]-biblijan kirj Ktuvim-jagusespäi i [[hristanuskond]]an 15. [[Vanh Zavet|Vanhan Zavetan]] kirj.
 
-Original om sätud evrejan kelel, 5. voz'sadal EME. Kirj kogoneb kümnes jagusespäi, ühtenzoittas niid kahthe palaha. Tegii om [[Ezra]]. Om toižid kirjoid, kudambiden tegijaks nimitadas Ezdrad, ned ei mülügoi kanonha.
+Original om sätud evrejan kelel, 5. voz'sadal EME. Kirj kogoneb kümnes jagusespäi, ühtenzoittas niid kahthe palaha. Tegii om judaizman [[Ezra]]-pap'. Om toižid kirjoid, kudambiden tegijaks nimitadas Ezdrad, ned ei mülügoi kanonha.
 
 {{Commons|Book of Ezra}}
 {{Vanhan Zavetan kirjad}}
