--- a/Venäman_valdkundznam.mw
+++ b/Venäman_valdkundznam.mw
@@ -2,10 +2,13 @@
 '''Venäman valdkundznam''' ({{lang-ru|Герб России}}) om [[Venälaine Federacii|Venälaižen Federacijan]] üks' oficialižiš simvoloišpäi. Sen ezmäine versii oli väges vspäi [[1497]]. Nügüdläine versii om vahvištadud vn 1993 30. päiväl kül'mkud, sädai — Jevgenii Uhnalöv-pirdai.
 
 == Ümbrikirjutand ==
-Kuldaine kaks'päine [[orl]] kuvadase rusttal geral'dižel laudal. Orl maihuti suugil ülähäks. Üks' sur' venc i kaks' pen't vencad ühtenzoittas lental orlan päl. Skipetr om orlan oiktas käpšus, deržav — huras. Pen' rusked laud sijadase orlan rindhal, siš hobedaine raccastai sinine vihmsoba päl ištub hobedal hebol i rikob keihasel mustad venujad [[drakon]]ad.
+Kuldaine kaks'päine [[orl]] kuvadase rusttal geral'dižel laudal. Orl maihuti suugil ülähäks. Üks' sur' venc i kaks' pen't vencad ühtenzoittas lental orlan päl. Skipetr om orlan oiktas käpšus, deržav — huras. Pen' rusked laud sijadase orlan rindhal, siš hobedaine raccastai sinine vihmsoba päl ištub hobedan hebon rachal i rikob keihasel mustad venujad [[drakon]]ad.
 
 == Kacu mugažo ==
 * [[Venäman flag]]
+
+== Homaičendad ==
+<references />
 
 {{Commons|Category:National coats of arms of Russia}}
 
