--- a/Venäman_valdkundznam.mw
+++ b/Venäman_valdkundznam.mw
@@ -1,5 +1,5 @@
 [[Fail:Coat of Arms of the Russian Federation.svg|right|250px]]
-'''Venäman valdkundznam''' ({{lang-ru|Герб России}}) om [[Venälaine Federacii|Venälaižen Federacijan]] üks' oficialižiš simvoloišpäi. Sen ezmäine versii oli väges vspäi [[1497]] ([[Ivan III]]-carin znam). Nügüdläine versii om vahvištadud Venäman prezidentan käsköl vn 1993 30. päiväl kül'mkud<ref>''О Государственном гербе Российской Федерации (Venälaižen Federacijan Valdkundznamas)'': VF:n Prezidentan käsk № 2050 30.11.1993-dataspäi. // Собрание актов Президента и Правительства РФ (VF:n Prezidentan i Ohjastusen aktoiden kogoduz). 1993. № 49. Lp. 4761. {{ref-ru}}</ref>, sädai — Jevgenii Uhnalöv-pirdai.
+'''Venäman valdkundznam''' ({{lang-ru|Герб России}}) om [[Venälaine Federacii|Venälaižen Federacijan]] üks' oficialižiš simvoloišpäi. Sen ezmäine versii oli väges vspäi [[1497]] ([[Ivan III Sur'|Ivan III]]-carin vahvištoituzznam). Nügüdläine versii om vahvištadud Venäman prezidentan käsköl vn 1993 30. päiväl kül'mkud<ref>''О Государственном гербе Российской Федерации (Venälaižen Federacijan Valdkundznamas)'': VF:n Prezidentan käsk № 2050 30.11.1993-dataspäi. // Собрание актов Президента и Правительства РФ (VF:n Prezidentan i Ohjastusen aktoiden kogoduz). 1993. № 49. Lp. 4761. {{ref-ru}}</ref>, sädai — Jevgenii Uhnalöv-pirdai.
 
 == Ümbrikirjutand ==
 Kuldaine kaks'päine [[orl]] kuvadase rusttal geral'dižel laudal. Orl maihuti suugil ülähäks. Üks' sur' venc i kaks' pen't vencad ühtenzoittas lental orlan päl. Skipetr om orlan oiktas käpšus, deržav — huras. Pen' rusked laud sijadase orlan rindhal, siš hobedaine raccastai sinine vihmsoba päl ištub hobedan hebon rachal i rikob keihasel mustad venujad [[drakon]]ad.<ref>''О Государственном гербе Российской Федерации (Venälaižen Federacijan Valdkundznamas)'': Federaline konstitucine käskuz № 2-FKZ 25.12.2000-dataspäi. // Собрание законодательства РФ (VF:n käskusišton kogoduz). 2000. № 52. Lp. 5021. {{ref-ru}}</ref>
