sel'ged znam kuvata

--- a/Mars.mw
+++ b/Mars.mw
@@ -1,7 +1,6 @@
 {{1000}}{{A10000}}
 [[Fail:Mars Hubble.jpg|thumb|right|250px|Mars vn 2001 kezakus (fotokuva [[NASA|NASA:n]] [[Habbl]]-teleskopaspäi)]]
-'''Mars''' (mugažo [[latinan kel'|latinan kelel]]) om nellänz' planet [[Päiväine|Päiväižespäi]] lugeden [[Päiväižen sistem]]as, [[Ma (planet)|Maižen]] gruppan planet. Se om tetab ristitkundale amuižiš aigoišpäi, rahvahidenkeskeine nimituz libub Amuižen Riman sodan [[Mars (jumal)|Mars-jumalaspäi]]. Planetan astronomine znam om [[Fail:Mars symbol (bold).svg|16px|♂]]
-.
+'''Mars''' (mugažo [[latinan kel'|latinan kelel]]) om nellänz' planet [[Päiväine|Päiväižespäi]] lugeden [[Päiväižen sistem]]as, [[Ma (planet)|Maižen]] gruppan planet. Se om tetab ristitkundale amuižiš aigoišpäi, rahvahidenkeskeine nimituz libub Amuižen Riman sodan [[Mars (jumal)|Mars-jumalaspäi]]. Planetan astronomine znam om ♂.
 
 == Ümbrikirjutand ==
 Marsan [[perigelii]] om 2,49232·10<sup>8</sup> km, [[afelii]] om 2,06655·10<sup>8</sup> km. Planet punose ümbri Päiväižes da tegeb kogonaižen punondan 687 maižes päiveses.
