--- a/Neptun.mw
+++ b/Neptun.mw
@@ -1,7 +1,7 @@
 {{1000}}{{A10000}}
 [[Fail:Neptune - Voyager 2 (29347980845) flatten crop.jpg|thumb|right|250px|Neptunan fotokuva [[Vojadžer-2]]-kaimdajaspäi]]
 {{Znamoičendad|Neptun (znamoičendad)}}
-'''Neptun''' ({{lang-la|Neptunus}}) om kahesanz' da kaikiš edahaižemb tetab planet [[Päiväine|Päiväižespäi]] lugeden [[Päiväižen sistem]]as, nellänz' surtte diametral i koumanz' massan mödhe. Planetan astronomine znam om [[Fail:Neptune symbol (bold).svg|16px|♆]].
+'''Neptun''' ({{lang-la|Neptunus}}) om kahesanz' da kaikiš edahaižemb tetab planet [[Päiväine|Päiväižespäi]] lugeden [[Päiväižen sistem]]as, nellänz' surtte diametral i koumanz' massan mödhe. Planetan astronomine znam om ♆.
 
 Planet om löutud Berlinan observatorijaspäi vn 1846 23. päiväl sügüz'kud. Nimitihe Amuižen Riman meriden [[Neptun (mifologii)|Neptun-jumalan]] oiktastuseks.
 
