*Empty MediaWiki Message*

--- a/Neemian_kirj.mw
+++ b/Neemian_kirj.mw
@@ -1,4 +1,4 @@
-[[Fail:108.Nehemiah Views the Ruins of Jerusalem's Walls.jpg|thumb|right|250px|''Neemia nägub Jerusaliman seiniden jändusid'', francižen [[Güstav Dore]]-grafikanpirdajan gravür, 1866]]
+[[Fail:108.Nehemiah Views the Ruins of Jerusalem's Walls.jpg|thumb|right|250px|''Neemia nägeb Jerusaliman seiniden ruinoid'', francižen [[Güstav Dore]]-grafikanpirdajan gravür, 1866]]
 '''Neemian kirj''' ({{lang-he|נְחֶמְיָה}}, {{lang-el|Νεεμιας}} ''Neemias'', {{lang-la|Nehemiae}}, {{lang-ru|Книга Неемии}}) om evrejan [[Tanah]]-biblijan Ktuvim-jagusen 11. kirj i hristanuskondan 16. [[Vanh Zavet|Vanhan Zavetan]] kirj (voib nimitadas Ezdran kahtendeks kirjamišton erasiš denominacijoiš).
 
 Kirj om sätud [[Jerusalim]]as evrejan kelel läz 400. vot EME, om ližadusid [[aramejan kel'|aramejan kelel]]. Tegii om Neemia vai hänen personaline biograf. Kogoneb 13 jagusespäi, kävutihe sijališt arhivad sädandan aigan. Arheologii vahvištab kirjan andmusid.
