--- a/Kotel'nič.mw
+++ b/Kotel'nič.mw
@@ -8,12 +8,13 @@
  | Eläjiden lugu = 23,682
  | Voz' = 2018
  | Pind = 29.2
- | Fail = Kotelnich station.jpg
+ | Fail = Kotelnich. Sovetskaya Street near Upper Square.jpg
  | Pämez' = Andrei Likov<br />(sügüz'ku 2017—.<br />''Андрей Лыков'')
  | Telefonkod = +7-83342-xx-xxx
  | Avtokod = 43
  | Aigvö = [[UTC]]+3 ([[MSK]]+0)
 }}
+[[Fail:Kotelnich. Town Map.jpg|thumb|left|250px|Lidnan kart (2013)]]
 '''Kotel'nič ''' ({{lang-ru|Коте́льнич}}) om [[Venäma]]n lidn, lidnümbrik da transporttesol'm [[Kirovan agj]]an päivlaskmas. Se om agjan videnz' lidn eläjiden lugun mödhe, [[Kotel'ničun rajon]]an administrativižeks keskuseks mugažo, ei mülü rajonha.
 
 == Istorii ==
@@ -30,6 +31,15 @@ Kotel'nič om lidnümbrikon üks'jäine eländpunkt.
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 24 979 ristitud. Kaikiš suremb ristitišt oli 38 tuhad eläjid vl 1992.
 
 Professionaližen opendusen aluzkund om Kirovan maižanduztehnikum.<ref>[http://www.kcxt-kotelnich.ru/ Kirovan maižanduztehnikuman sait (''kcxt-kotelnich.ru'').] {{ref-ru}}</ref>
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Дом MG 2645.jpg|Lidnan administracijan sauvuz (2019)
+Никольская церковь, вид от библиотеки.jpg|Ph. Mikulai-čudonsädajan jumalanpert', vn 2020 nägu
+Kotelnich. Nook of Sovetskaya Street.jpg|Torguindkeskuz vl 2013
+Kotelnich. Town Sports centre.jpg|Fizkul'turine tervehtamižkompleks (2013)
+Котельнич. Вокзал. - panoramio.jpg|Kotel'nič-päraudtestancijan sauvuz vl 2011
+</gallery>
 
 == Homaičendad ==
 <references />
