--- a/Luz_(lidn).mw
+++ b/Luz_(lidn).mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 10,232
  | Voz' = 2018
  | Pind = 20
- | Fail = Луза,вокзал - panoramio.jpg
+ | Fail =
  | Pämez' = Sergei Teterin<br />(kül'mku 2016—)
  | Telefonkod = +7-83346-xx-xxx
  | Avtokod = 43
@@ -30,6 +30,14 @@ Hristoforovo-žilo (412 rist. vl 2010) da 35 küläd mülüdas lidnankundha Luza
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 11 260 ristitud, lidnankundan — 12 283 ristitud. Kaikiš suremb lidnan ristitišt oli läz 14 tuhad eläjid vll 1970−1979 (14 033 eläjad vl 1970). Kaik 11 414 ristitud elihe lidnankundas vl 2017, rajonan seičeme kümnendest.
 
 Professionaližen opendusen aluzkund om Kirovan äiprofil'žen tehnikuman Luzan filial.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Ustnedumsky Monastery.jpg|Ph. Jumalanmaman tulendan Pühäpertihe jumalanpert' enččes Ph. Leonid Ust'nedumskijan mez'jumalankodiš (1608−1764) läz lidnad, vn 2007 nägu
+Луза, гостиница "Привал" - panoramio.jpg|«Prival»-adivpert' vl 2011
+Luza, Kirov Oblast, Russia - panoramio.jpg|Transporttesild Luzanjoges päliči vl 2013
+Луза,вокзал - panoramio.jpg|Luz-päraudtestancijan sauvuz vl 2011
+</gallery>
 
 == Homaičendad ==
 <references />
