--- a/Malmiž.mw
+++ b/Malmiž.mw
@@ -27,7 +27,7 @@ Lidn sijadase rajonan suvipäivlaskmas, [[Vätk (jogi)|Vätk-jogen]] oiktal rand
 Malmiž om lidnankundan üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 8 265 ristitud, rajonan koumandez. Kaikiš suremb lidnan ristitišt oli 10..11 tuhad eläjid vll 1970−2001 (11 462 eläjad vl 1979).
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 8 265 ristitud, rajonan koumandez. Kaikiš suremb lidnan ristitišt oli 10..11 tuhad eläjid vll 1970−2001 (11 462 eläjad vl 1979). [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalan nägundan päjumalanpert' om olmas lidnas.
 
 Rahvahad (2010): [[venälaižed]] — 58,1%, [[totarlaižed]] — 36,0%, [[marilaižed]] — 3,7%, [[udmurtalaižed]] — 1,7%, toižed rahvahad — 0,5%.
 
