--- a/Nadim.mw
+++ b/Nadim.mw
@@ -29,9 +29,20 @@ Lidn sijadase ühtennimižen jogen hural randal, 6 m ü.m.t. keskmäižel korktu
 Nadim om lidnankundan üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 46 611 ristitud, rajonan seičeme kümnendest. Kaikiš suremb lidnan ristitišt oli 52 586 eläjad vl 1989. Ortodoksižen hristanuskondan pühäpert' i islaman mečet' oma olmas lidnas.
+Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 46 611 ristitud, rajonan seičeme kümnendest. Kaikiš suremb lidnan ristitišt oli 52 586 eläjad vl 1989. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] pühäpert' i [[islam]]an mečet' oma olmas lidnas.
 
 Rahvahad (enamba 1,1% vl 2010): [[venälaižed]] — 75,1%, [[ukrainalaižed]] — 9,1%, [[totarlaižed]] — 5,1%, [[nencalaižed]] — 1,2%, [[baškiralaižed]] — 1,1%, [[vaugedvenälaižed]] — 1,1%, toižed rahvahad — 7,3%.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Nadym Svyato-Nicolskiy hram.jpg|Ph. Mikulain jumalanpert', vn 2008 nägu
+MosqueNadym.jpg|Islaman «Azat Safa»-pühäpert', vn 2007 nägu
+Nadym dvorec brakosotchetaniy.jpg|Naindan pert'kulu (2008)
+ParkNadym.jpg|Lidnan puišt (2008)
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://nadymregion.ru/ Lidnan da sen rajonan tobmuden aluzkundoiden oficialine sait (''nadymregion.ru'').] {{ref-ru}}
