--- a/Aggejan_kirj.mw
+++ b/Aggejan_kirj.mw
@@ -1,6 +1,6 @@
 '''Aggejan kirj''' ({{lang-he|חַגַּי}} ''Haggai'', {{lang-el|Ἁγγαῖος}} ''Aggaios'', {{lang-la|Aggaei}}, {{lang-ru|Книга Аггея}}) om evrejan [[Tanah]]-biblijan kirj Neviim-jagusespäi i [[hristanuskond]]an 37. [[Vanh Zavet|Vanhan Zavetan]] kirj.
 
-Original om sätud [[Aggei (endustai)|Aggei]]-endustajal, om kirjutadud evrejan kelel vl 520 EME. Kirj kogoneb kahtes palaspäi.
+Original om sätud [[Aggei (endustai)|Aggei]]-endustajal, om kirjutadud evrejan kelel vl 520 EME, [[Darii I Sur']]-carin ohjandusen kahtendel vodel. Kirj kogoneb kahtes palaspäi, mülütab endustajan nell' paginad Judejan rahvahan polehe Jumalan sanoiš sennoks.
 
 Aggejan endustused mainitasoiš [[Ezdran kirj]]as (5:1, 6:14).
 
