--- a/Jovan_kirj.mw
+++ b/Jovan_kirj.mw
@@ -1,3 +1,4 @@
+[[Fail:Job Scroll.jpg|thumb|right|250px|Jovan kirj amuiževrejan kelel]]
 '''Jovan kirj''' ({{lang-he|אִיּוֹב}} ''ʾIjjōḇ'', {{lang-el|Ἰῶβ}}, {{lang-la|Iob}}, {{lang-ru|Книга Иова}}) om evrejan Biblijan ([[Tanah]]) koumanden Ktuvim-jagusen i [[Vanh Zavet|Vanhan Zavetan]] kirj. Se om sätud 6.-4. voz'sadal EME.
 
 Kirj lugese kuti korged poem, mugažo runoformaks kändusiš, päiči augus i loppalas. Tematik om läžundoiden i gorän, vihan süd.
