--- a/Psalmoiden_kirj.mw
+++ b/Psalmoiden_kirj.mw
@@ -1,7 +1,8 @@
+[[Fail:Paris psaulter gr139 fol1v.jpg|thumb|right|250px|[[David]] (Izrailin kahtenz' car') sädab psalmoid väten, [[Parižan psaltir']], 10. voz'sada]]
 [[Fail:Psaltir.jpg|thumb|right|250px|Pästandan kirjankor' vepsän kelel]]
 '''Psalmoiden kirj''' ({{lang-he|תְּהִלִּים}} ''Tegilim'', {{lang-el|Ψαλμοὶ}} ''Psalmoi'' [[psalterii]]-jändesoitoiden mödhe, {{lang-la|Psalmorum}}, {{lang-ru|Псалтирь}}) om evrejižen [[Tanah]]-biblijan kirj Ktuvim-jagusespäi i [[hristanuskond]]an [[Vanh Zavet|Vanhan Zavetan]] 19. kirj.
 
-Kirj kogoneb 150 vai 151 pajospäi (psalmaspäi).
+Kirj kogoneb 150 vai 151 pajospäi (psalmaspäi). Om erazvuiččid melid pajoiden augotižlibundas: Jumalaspäi, vajehtadud ristituil Hänen pajod, mehidespäi.
 
 [[2013]]. vodel psalmoiden kirj om pästtud [[vepsän kel'|vepsän kelel]]. Kändai om [[Zaiceva Nina|Nina Zaiceva]].
 
