--- a/Hruškova_Lüdmila.mw
+++ b/Hruškova_Lüdmila.mw
@@ -2,7 +2,12 @@
 | изображение = Khroushkova.jpg
 | описание изображения = Lüdmila Hruškova vl 2009
 }}
-'''Lüdmila Georgijevna Hruškova''' ({{lang-ru|Людмила Георгиевна Хрушкова}}; sünd. [[15. viluku]] [[1943]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om tetab nevondkundal'ne da [[Venäma|venämalaine]] arheolog, čomamahtontedomez' da professor.
+'''Lüdmila Georgijevna Hruškova''' ({{lang-ru|Людмила Георгиевна Хрушкова}}; sünd. [[15. viluku]] [[1943]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om tetab nevondkundal'ne da [[Venäma|venämalaine]] arheolog i čomamahtontedomez', [[Moskvan valdkundaline universitet|MVU:n]] i [[Venäman valdkundaline gumanitarine universitet|VVGU:n]] professor (1994).
+
+== Biografii ==
+Naine om Moskvan istoriž-arhivižen institutan pästnikan. Radoi [[Abhazii|Abhazijan]] valdkundaližes muzejas, vspäi 1974 — Abhazijan kelen, literaturan i istorijan institutan tedoradnik ([[Suhum]]). Tedonaine vahvišti istorižiden tedoiden kandidatan «Amukeskaigaližen Abhazijan skul'ptur»-dissertacijad vl 1978, sai istorijan tedodoktoran arvod «Päivnouzmaižen Mustmererandpolen amuhristianižed muštnikad»-dissertacijan vahvištusen jäl'ghe vl 1991.
+
+Hruškova vedi möhäantikaigaižen i Vizantijan aigoiden muštnikoiden kaivandusid Abhazijas häktemb mi 20 vot. Tegi enamba pol'tošt sadad tedotöid, sidä kesken sädi viž monografijad. Naine om otnus amuhristianižen i Vizantijan arheologijan ühthižihe problemoihe da istorijha.
 
 == Homaičendad ==
 <references/>
