--- a/Las_Pen'jas_de_Riglos.mw
+++ b/Las_Pen'jas_de_Riglos.mw
@@ -9,14 +9,27 @@
  | Voz' = 2018
  | Pind = 218
  | Fail = Riglos.JPG
- | Pämez' = Huan Ramon Aso Bailo
+ | Pämez' = Huan Fransisko Torral'ba Peres<br/>(2015−2023,<br/>''Juan Francisco Torralba Pérez'')
  | Telefonkod = +34-97438
  | Aigvö = tal'vel [[UTC]]+1.<br />kezal [[UTC]]+2
 }}
-'''Las Pen'jas de Riglos''' ({{lang-es|Las Peñas de Riglos}}, [[aragonan kel'|arag]].: ''As Penyas de Riglos'') om [[municipalitet]] [[Ispanii|Ispanijas]], [[Uesk]]-provincijas.
+'''Las Pen'jas de Riglos''' ({{lang-es|Las Peñas de Riglos}}, [[aragonan kel'|arag]].: ''As Penyas de Riglos'') om [[municipalitet]] [[Ispanii|Ispanijan]] pohjoižpäivnouzmas, avtonomižen [[Aragon]]-ühthižkundan [[Uesk]]-provincijas.
 
-Kundan pind om 218 km², se sijadase 678 m ü.m.t. keskmäižel korktusel. Las Pen'jas de Riglosan eläjiden lugu oli 268 ristitud 2010-ndes vodes.
+== Geografijan andmused  ==
+Municipalitet om sätud 1960-nzil vozil. Se sijadase ühthižkundan pohjoižes. Kundan pind om 218 km², levitase 678 m ü.m.t. keskmäižel korktusel.
 
+[[Al'pinizm]]an navedijad tuldas sportata kundha.
+
+== Eläjad ==
+Las Pen'jas de Riglosan eläjiden lugu oli 268 ristitud 2010-ndes vodes. Kaikiš suremb ristitišt oli 669 eläjad vl 1970, no se poleni läz kahthe kerdha vodele 1981.
+
+Edeline kundan pämez' om Huan Ramon Aso Bailo (2011−2015).
+
+== Homaičendad ==
+<references />
+
+== Irdkosketused ==
+* [http://laspenasderiglos.es/ Municipalitetan sait (''laspenasderiglos.es'')]. {{ref-es}}
 {{Commons|Category:Las Peñas de Riglos}}
 
 {{stub}}
