*Empty MediaWiki Message*

--- a/Las_Pen'jas_de_Riglos.mw
+++ b/Las_Pen'jas_de_Riglos.mw
@@ -29,7 +29,7 @@ Edeline kundan pämez' om Huan Ramon Aso Bailo (2011−2015).
 <references />
 
 == Irdkosketused ==
-* [http://laspenasderiglos.es/ Municipalitetan sait (''laspenasderiglos.es'')]. {{ref-es}}
+* [http://www.laspenasderiglos.es/ Municipalitetan sait (''laspenasderiglos.es'')]. {{ref-es}}
 {{Commons|Category:Las Peñas de Riglos}}
 
 {{stub}}
